--- a/custom_components/xiaomi_miio_cooker/manifest.json
+++ b/custom_components/xiaomi_miio_cooker/manifest.json
@@ -7,7 +7,7 @@
   "documentation": "https://github.com/syssi/xiaomi_cooker",
   "issue_tracker": "https://github.com/syssi/xiaomi_cooker/issues",
   "requirements": [
-    "construct==2.10.56",
+    "construct>=2.10.56",
     "git+https://github.com/sschirr/python-miio.git@dev_version#python-miio==0.5.11+sschirrdev"
   ],
   "dependencies": [],
